kubernetes/spec_templates/celerybeat.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: celerybeat
  labels:
    stack: STACK_NAME
    type: django-app
    service: celerybeat
spec:
  clusterIP: None
  selector:
    type: django-app
    service: celerybeat
---
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: celerybeat
  labels:
    stack: STACK_NAME
spec:
  serviceName: celerybeat
  replicas: 1
  selector:
    matchLabels:
      type: django-app
      service: celerybeat
  template:
    metadata:
      labels:
        type: django-app
        service: celerybeat
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: worker
        image: 421987441365.dkr.ecr.us-east-2.amazonaws.com/stockpicker/celery:IMAGE_TAG
        imagePullPolicy: Always
        command: ["/bin/bash"]
        args: ["-c", "sleep 180 && celery beat --app=stockpicker.celery --loglevel=info"]
