kubernetes/spec_templates/postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    stack: STACK_NAME
spec:
  clusterIP: None
  ports:
  - port: 5432
  selector:
    type: postgres
    service: postgres
---
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: postgres
  labels:
    stack: STACK_NAME
spec:
  serviceName: postgres
  selector:
    matchLabels:
      type: postgres
      service: postgres
  template:
    metadata:
      labels:
        type: postgres
        service: postgres
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: postgres
        image: postgres:9.4
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: pg-data
      volumes:
      - name: pg-data
        persistentVolumeClaim:
          claimName: postgres-data
