kubernetes/spec_templates/webapp.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: webapp
  labels:
    stack: STACK_NAME
    type: django-app
    service: webapp
spec:
  clusterIP: None
  selector:
    type: django-app
    service: webapp
  ports:
  - name: web
    port: 8001
    targetPort: 8001
---
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: webapp
  labels:
    stack: STACK_NAME
spec:
  serviceName: webapp
  replicas: WEBAPP_REPLICAS
  selector:
    matchLabels:
      type: django-app
      service: webapp
  template:
    metadata:
      labels:
        type: django-app
        service: webapp
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: webapp
        image: 421987441365.dkr.ecr.us-east-2.amazonaws.com/stockpicker/webapp:IMAGE_TAG
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /health/database/
            port: 8001
          initialDelaySeconds: 120
          timeoutSeconds: 1
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health/tickers-loaded/
            port: 8001
          initialDelaySeconds: 120
          timeoutSeconds: 1
          periodSeconds: 10
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapp
  labels:
    stack: STACK_NAME
    type: django-app
    service: webapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: STACK_NAME.sloanahrens.com
    http:
      paths:
      - backend:
          serviceName: webapp
          servicePort: 8001
